Bug des hero-wrap

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -68,6 +68,7 @@ a {
 .hero-wrap {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   background: #e6f0ff;
   height: calc(100vh - 90px);
   position: relative;
@@ -112,23 +113,18 @@ a {
   border-radius: 8px;
 }
 
-.hero {
-  margin-top: 130px;
+.hero-wrap .info {
+  width: 51%;
 }
 
-.hero .info {
-  width: 51vh;
-}
-
-.hero .sub-title {
+.hero-wrap .sub-title {
   color: #687691;
   font-size: 1.8rem;
   font-weight: 500;
   letter-spacing: 0.018rem;
 }
 
-.hero .title {
-  width: 559px;
+.hero-wrap .title {
   margin-top: 8px;
   color: #000336;
   font-size: 6.4rem;
@@ -136,8 +132,7 @@ a {
   line-height: 7.6rem;
 }
 
-.hero .desc {
-  width: 550px;
+.hero-wrap .desc {
   margin-top: 30px;
   color: #5a6473;
   font-size: 1.8rem;
